<resources>
    <string name="app_name">WEATHER</string>

    <string name="city_name">City name</string>
    <string name="city_label">Enter city</string>
    <string name="city_hint">Enter city</string>
    <string name="label">city</string>
    <string name="search">search</string>
    <string name="search_hint">City</string>
    <string name="bt_search">SEARCH</string>
    <string name="temperature">TEMPERATURE, C</string>
    <string name="date">DATE</string>
    <string name="pressure">PRESSURE</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="clouds">CLOUDS</string>
    <string name="temp">22.5 C</string>

    <string name="tab_a_label">CURRENT WEATHER</string>
    <string name="tab_b_label">3-HOUR FORECAST</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_time">LOCAL TIME</string>
    <string name="sunrise">SUNRISE</string>
    <string name="geo">COORDS</string>
    <string name="sunset">SUNSET</string>
    <string name="feels_like">FEELS LIKE</string>
    <string name="city">City</string>
</resources>
